--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -58,4 +59,9 @@ dependencies {
 
     // Circle Image view
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    // Firebase dependencies
+    implementation platform('com.google.firebase:firebase-bom:31.0.1')
+    implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
+
 }
