Added audio/video chat

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,18 +57,21 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // Scalable size unit (support for different size)
-    implementation 'com.intuit.sdp:sdp-android:1.0.6'
-    implementation 'com.intuit.ssp:ssp-android:1.0.6'
+    implementation 'com.intuit.sdp:sdp-android:1.1.0'
+    implementation 'com.intuit.ssp:ssp-android:1.1.0'
 
     // Circle Image view
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     // Firebase dependencies
-    implementation platform('com.google.firebase:firebase-bom:31.0.1')
+    implementation platform('com.google.firebase:firebase-bom:31.0.2')
     implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
 
     // retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
+
+    // Jitsi meet
+    implementation ('org.jitsi.react:jitsi-meet-sdk:6.2.2') { transitive = true }
 
 }
