--- a/settings.gradle
+++ b/settings.gradle
@@ -3,13 +3,20 @@ pluginManagement {
         gradlePluginPortal()
         google()
         mavenCentral()
+
     }
 }
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
+        maven {
+            url "https://github.com/jitsi/jitsi-maven-repository/raw/master/releases"
+        }
         google()
         mavenCentral()
+        maven {
+            url 'https://www.jitpack.io'
+        }
     }
 }
 rootProject.name = "YooChat"
